# mannumopt

./: .gitmodules  CMakeLists.txt  README.md  biblio.txt  package.xml
examples/: average_of_frames.py
include/mannumopt/: augmented-lagrangian.hpp  bfgs.hpp  function.hpp  fwd.hpp  gauss-newton.hpp  newton.hpp  numdiff.hpp  penalty.hpp  print.hpp
include/mannumopt/decomposition/: choleski.hpp
include/mannumopt/line-search/: armijo.hpp
include/mannumopt/trust-region/: cauchy.hpp  two-dimensional.hpp
python/: CMakeLists.txt  __init__.py  augmented-lagrangian.cpp  bfgs.cpp  gauss-newton.cpp  line-search.cpp  line-search.hpp  newton.cpp  numdiff.cpp  penalty.cpp  pymannumopt.cpp  pymannumopt.hpp
tests/: CMakeLists.txt  augmented-lagrangian.cpp  bfgs.cpp  choleski.cpp  gauss-newton.cpp  newton-ls.cpp  newton-tr.cpp  numdiff.cpp  penalty.cpp  test-algo-utils.hpp
tests/python/: function.py  python.py
