find_package(Boost COMPONENTS unit_test_framework REQUIRED)

function(add_cpp_test name)
  set(test_name test-cpp-${name})
  add_executable(${test_name} ${name}.cpp)
  add_test(NAME ${test_name} COMMAND ${test_name})
  target_link_libraries(${test_name} mannumopt Boost::unit_test_framework)
  target_compile_definitions(${test_name} PRIVATE BOOST_TEST_MAIN BOOST_TEST_DYN_LINK BOOST_TEST_MODULE=${test_name})
endfunction()

add_cpp_test(bfgs)
target_link_libraries(test-cpp-bfgs NLopt::nlopt)
add_cpp_test(gauss-newton)
add_cpp_test(newton-ls)
add_cpp_test(newton-tr)
add_cpp_test(choleski)
add_cpp_test(numdiff)
add_cpp_test(augmented-lagrangian)
add_cpp_test(penalty)
